Debugging tests.